--- a/resources/style.css
+++ b/resources/style.css
@@ -75,8 +75,7 @@ a {
     justify-content: center;
     flex-wrap: wrap;
     width: 1000px;
-    
-  }
+    }
 
 
 .images img {
@@ -88,7 +87,6 @@ a {
  margin-top: 10px;
  text-align:center;
  font-weight:bold;
-
 }
 
 
@@ -115,5 +113,24 @@ a {
     margin-right: 25px;
 }
 
+  /** LOCATIONS **/
 
+.locations{
+    background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg");
+    height: 500px;
+    width: 1200px;
+    margin: 0 auto;
+    padding-top: 150px;
+    text-align: center;
+    opacity: 1.0;
+}
+
+.boxes {
+  background-color:black;
+  display: inline-block;
+     justify-content: center;
+     align-items: center;
+     margin-top: 15px;
+     width:300px;
+     height:300px;
 }
