add contact info, refine details

--- a/resources/style.css
+++ b/resources/style.css
@@ -8,11 +8,13 @@ body {
  background-color:black;
  opacity:0.9;
  text-align: center;
+ margin: 0 auto;
 }
 
 a {
  color:seashell;
  text-decoration:underline;
+ padding:10px;
 }
 
 /** HEADER **/
@@ -22,12 +24,14 @@ a {
  justify-content: space-between;
  align-items: center;
  position: fixed;
+ height:69px;
  width: 100%;
  z-index: 1000;
  padding: 10px;
  border-bottom: 1px solid seashell;
  background-color: black;
  opacity: 0.9;
+
 }
 
 .header img {
@@ -134,3 +138,15 @@ a {
      width:300px;
      height:300px;
 }
+
+  /** FOOTER **/
+
+  .contact{
+    height:200px;
+  }
+
+  .footer{
+    text-align:left;
+    padding-left:20px;
+  }
+  }
